Added Color column to carts_products & orders_products
